# trade

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  backlog.json  features.json  generator.md  harness-rules.md  progress.json  pyproject.toml
workbench/backend/: .env.example  alembic.ini  pyproject.toml
workbench/backend/scripts/: migrate.sh  seed_e2e_reports.py  seed_golden_e2e.py
workbench/backend/tests/: conftest.py
workbench/backend/tests/acceptance/: conftest.py  test_b071_golden_backend_invariants.py  test_b072_clock_injection.py  test_b072_golden_fullstack_seed.py  test_b074_paper_targets_markable.py  test_b075_wide_universe_production.py  test_b078_data_freshness_gate.py
workbench/backend/tests/cassettes/: README.md
workbench/backend/tests/safety/: test_ai_advisor_red_team.py  test_ai_advisor_red_team_vcr.py  test_b026_banner_env_wiring.py  test_b034_no_generative_ai.py  test_backtest_worker_scope.py  test_backtests_request_self_contained.py  test_deploy_alembic_env_load.py  test_deploy_backtest_wiring.py  test_deploy_timer_wiring.py  test_llm_aigc_gateway_env_wiring.py  test_market_context_env_wiring.py  test_market_scheduler_scope.py  test_monitoring_request_self_contained.py  test_news_ingest_self_contained.py  test_news_no_scheduler.py  test_news_schema_metadata_only.py  test_news_snapshot_dir_provisioned.py  test_no_broker_sdk_imports.py  test_no_date_today.py  test_no_hardcoded_model_names.py  test_no_non_sqlite_db_drivers.py  test_no_paper_or_live_urls.py  test_recommendations_request_self_contained.py  test_reverify_frozen_params.py  test_runtime_dependencies_pinned.py  test_safety_eval_workflow.py  test_safety_placeholder.py  test_semantic_judge_vcr.py  test_semantic_lint.py  test_settings_env_allowlist.py  test_snapshots_request_self_contained.py  test_strategy_modes_request_self_contained.py  test_symbols_request_self_contained.py  test_trade_package_install_wiring.py
workbench/backend/tests/unit/: conftest.py  test_account_source_unification.py  test_advisor_grounding.py  test_advisor_precompute.py  test_advisor_recommendation_repo.py  test_advisor_route.py  test_advisor_schema.py  test_advisor_service.py  test_akshare_fundamentals_parser.py  test_alpha_vantage_loader.py  test_auth_dependency.py  test_auth_jwt_validator.py  test_b054_localized_strings.py  test_b071_golden_precompute.py  test_b072_clock_cli.py  test_b078_fetch_timeout.py  test_b078_freshness.py  test_b081_engine_fidelity_registration.py  test_b082_dividend_lowvol_card.py  test_b087_curated_symbol_names_seed.py  test_backfill_fundamentals.py  test_backfill_prices.py  test_backlog.py  test_backlog_prod_config.py  test_backtest_data_range_api.py  test_backtest_data_window.py  test_backtest_dispatch.py  test_backtest_error_kinds.py  test_backtest_explanation.py  test_backtest_run_repo.py  test_backtest_worker.py  test_backtests.py  test_bootstrap_cli.py  test_budget_log_repo.py  test_cn_attack_cli.py  test_cn_attack_dispatch.py  test_cn_attack_precompute.py  test_cn_attack_signal_scores.py  test_cn_benchmark_refresh.py  test_cn_dividend_lowvol.py  (+131 more)
workbench/backend/workbench_api/: __init__.py  app.py  cli_clock.py  settings.py
workbench/backend/workbench_api/advisor/: __init__.py  cli.py  grounding.py  precompute.py  schema.py  semantic_lint.py  service.py
workbench/backend/workbench_api/auth/: __init__.py  dependency.py  jwt_validator.py
workbench/backend/workbench_api/backtests/: __init__.py  adapters.py  canonical.py  error_kinds.py  explanation.py  mapping.py  worker.py
workbench/backend/workbench_api/cli/: __init__.py  bootstrap.py  drill_cleanup.py
workbench/backend/workbench_api/data/: __init__.py  alpha_vantage_loader.py  cost_guard.py  fred_loader.py  fundamentals_loader.py  fundamentals_sync.py  market_context_common.py  sec_edgar_loader.py  snapshot_loader.py  tiingo_loader.py  xbrl_parser.py  yfinance_loader.py
workbench/backend/workbench_api/data_refresh/: __init__.py  call_timeout.py  cli.py  cn_benchmark.py  cn_dividend_lowvol.py  cn_fundamentals.py  cn_hk_prices.py  cn_marketcap.py  cn_universe.py  freshness.py  fx_refresh.py  inventory.py  refresh.py  window.py
workbench/backend/workbench_api/db/: __init__.py  engine.py  require_production_db.py  session.py
workbench/backend/workbench_api/i18n/: __init__.py  messages.py
workbench/backend/workbench_api/llm/: __init__.py  cost_guard.py  eval_resilience.py  gateway.py  judge.py  routing.py  semantic_judge.py
workbench/backend/workbench_api/market/: __init__.py  catalog.py  cli.py
workbench/backend/workbench_api/monitoring/: __init__.py  cli.py  cpcv.py  exposure.py  ic.py  metrics_job.py  reverify_cli.py  reverify_data_append.py  reverify_kernel.py  reverify_landings.py  reverify_runner.py  reverify_service.py  reverify_worker.py  staleness.py  tracking.py  trial_backfill.py  trial_backfill_b081.py  trial_backfill_b082.py  trial_backfill_b083.py  trial_backfill_b084.py  trial_backfill_b085.py  trial_backfill_b106.py
workbench/backend/workbench_api/news/: __init__.py  association.py  cli.py  embedder.py  sleeve_tickers.py  snapshot.py  ticker_match.py  topics.py
workbench/backend/workbench_api/news_translation/: __init__.py  cli.py  service.py
workbench/backend/workbench_api/observability/: __init__.py  active_users.py  backup_status.py  error_buffer.py  logging.py  middleware.py  sentry.py
workbench/backend/workbench_api/paper/: __init__.py  cli.py  engine.py  mtm.py  pnl.py  service.py  targets.py
workbench/backend/workbench_api/price_history/: __init__.py  backfill.py  cli.py
workbench/backend/workbench_api/prices/: __init__.py  cli.py  cn_snapshot_sync.py
workbench/backend/workbench_api/recommendations/: __init__.py  cli.py  precompute.py  rationale.py
workbench/backend/workbench_api/routes/: __init__.py  _stub.py  advisor.py  backlog.py  backtests.py  dashboard.py  execution.py  home.py  market_context.py  monitoring.py  news.py  paper.py  recommendations.py  reports.py  snapshots.py  strategies.py  strategy_modes.py  symbols.py
workbench/backend/workbench_api/schemas/: __init__.py  (+20 more)
(+1428 files in other folders)
