[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "trade"
version = "0.1.0"
description = "Fixture-first Global ETF Momentum backtest MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  # B044 F001: ``trade/`` imports numpy directly (factor scoring / risk
  # parity). pandas pulls numpy transitively, but per the runtime-dependency
  # hygiene rule (framework v0.9.29 §12.8) a directly-imported package is an
  # explicit dependency — keeps the wheel install self-contained when it lands
  # in the production VM venv (B044 evaluator timer imports trade).
  "numpy>=1.26",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["trade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
files = ["trade"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "numpy", "numpy.*"]
ignore_missing_imports = true
