[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

# B021 first deploy trigger: 2026-05-16 — touch file to flow through
# workbench-backend.yml + workbench-frontend.yml → workbench-deploy.yml
# chain. VM bootstrap (dirs / venv / systemd units / nginx vhost / cert /
# env file / SA scope) all completed prior to this commit by Planner.
# Retry 2: after fix(B021-F004) commit 7227688 scoped pre-flight grep
# to workbench/ source only (was tripping on doc references).
# Retry 3: after DEPLOY_SSH_KNOWN_HOSTS secret added (was missing from
# B021 prep #5 — only 7 of 8 needed secrets uploaded).
# Retry 4: after deploy.sh updated to pip install backend wheel before
# alembic upgrade (was: venv bare from bootstrap, alembic not importable).
# Retry 5: after deploy.sh split systemctl restart into per-service calls
# (sudoers whitelists each service name individually; combined call fails).
# Retry 6: after /etc/workbench/ chmod 750→755 (deploy user needed
# traverse bit to read uvicorn-logging.json — file was 644 but dir was
# 750 root:root). Services now active + healthcheck passing externally.
# Retry 7: after backup unit hardened (no /snap/bin in PATH —
# snap-confine fails under systemd; PrivateTmp=false — snap can't see
# private tmp; ExecStart=/opt/workbench/workbench-backup.sh — script
# is infra not per-release). google-cloud-cli installed via apt to
# /usr/bin/gcloud as replacement for snap. Backup verified: 2 objects
# in gs://.../daily/ — one direct test + one via systemd.

[project]
name = "workbench_api"
version = "0.1.0"
description = "Workbench backend API (B020 dev infrastructure skeleton)."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<0.116",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "python-jose[cryptography]>=3.3,<4",
  # B023 F004 fills route accepts multipart CSV uploads via `UploadFile`;
  # FastAPI raises RuntimeError at import time when `Form` / `UploadFile`
  # appear in a route signature without this transitive dependency
  # installed. Pin a known-good version range matching FastAPI 0.115.
  "python-multipart>=0.0.9,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<0.31",
]

[project.scripts]
workbench-bootstrap = "workbench_api.cli.bootstrap:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "types-python-jose>=3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["workbench_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
# Test files run in CI and were also scanned by Codex F006; including
# `tests` here keeps the surfaces in lockstep so a stray `monkeypatch`
# without an annotation cannot pass local mypy and then trip evaluator
# review (B021-F006-2 was exactly that drift).
files = ["workbench_api", "tests"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
