[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

# B021 first deploy trigger: 2026-05-16 — touch file to flow through
# workbench-backend.yml + workbench-frontend.yml → workbench-deploy.yml
# chain. VM bootstrap (dirs / venv / systemd units / nginx vhost / cert /
# env file / SA scope) all completed prior to this commit by Planner.
# Retry 2: after fix(B021-F004) commit 7227688 scoped pre-flight grep
# to workbench/ source only (was tripping on doc references).
# Retry 3: after DEPLOY_SSH_KNOWN_HOSTS secret added (was missing from
# B021 prep #5 — only 7 of 8 needed secrets uploaded).
# Retry 4: after deploy.sh updated to pip install backend wheel before
# alembic upgrade (was: venv bare from bootstrap, alembic not importable).
# Retry 5: after deploy.sh split systemctl restart into per-service calls
# (sudoers whitelists each service name individually; combined call fails).
# Retry 6: after /etc/workbench/ chmod 750→755 (deploy user needed
# traverse bit to read uvicorn-logging.json — file was 644 but dir was
# 750 root:root). Services now active + healthcheck passing externally.
# Retry 7: after backup unit hardened (no /snap/bin in PATH —
# snap-confine fails under systemd; PrivateTmp=false — snap can't see
# private tmp; ExecStart=/opt/workbench/workbench-backup.sh — script
# is infra not per-release). google-cloud-cli installed via apt to
# /usr/bin/gcloud as replacement for snap. Backup verified: 2 objects
# in gs://.../daily/ — one direct test + one via systemd.

[project]
name = "workbench_api"
version = "0.1.0"
description = "Workbench backend API (B020 dev infrastructure skeleton)."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<0.116",
  # B080 F002: ``numpy`` is imported at module top-level by
  # ``workbench_api/monitoring/ic.py`` (rank-IC / forward-return math migrated
  # from the b077 first-look script). It is already present transitively via
  # pandas, but the runtime-deps-pinned safety guard requires it declared here
  # so the production wheel resolves it.
  "numpy>=2,<3",
  # B027 F002 fix-round 1: `httpx` was previously only a `dev` extra
  # because the test suite uses it via TestClient. B027's
  # `workbench_api/data/tiingo_loader.py` now imports `httpx` at
  # module top-level, which means a production install (which only
  # resolves the [project].dependencies set, not the dev extras)
  # cannot even import the module. Lifting it here keeps the
  # production wheel self-contained.
  "httpx>=0.27",
  # B028 F001: ``yfinance`` is the free non-official Yahoo Finance
  # wrapper used by ``workbench_api/data/yfinance_loader.py`` for the
  # cross-check path that asserts Tiingo prices match yfinance within
  # 0.5% on a random ticker × date sample. yfinance must stay in the
  # runtime dependency set (per framework v0.9.29 §12.8) so the
  # production wheel install carries the import — the safety-regression
  # ``test_critical_runtime_deps_pinned`` test pins this contract.
  "yfinance>=0.2.40",
  # B033 F003: ``feedparser`` is the canonical RSS/Atom parser the
  # ``workbench_api/news/adapters/yahoo_rss.py`` adapter imports at
  # module top-level. Must stay in the runtime dep set (framework
  # v0.9.29 §12.8 hygiene) so the production wheel install resolves
  # it — the safety-regression ``test_critical_runtime_deps_pinned``
  # asserts this contract; type stubs are unavailable, so callers
  # handle the import with ``# type: ignore[import-untyped]``.
  "feedparser>=6.0,<7",
  # B061 F002: ``akshare`` (东财 EOD history, primary) + ``baostock``
  # (cross-check / fallback) are the China A-share **data** libraries — NOT
  # broker SDKs (the no-broker guard's banlist is futu / tiger / ib / alpaca /
  # …; akshare & baostock are deliberately permitted databases). They feed the
  # CN ``SymbolDataProvider`` for the research-only /symbols lookup. B060 P0
  # spike verified both install + reach China sources from the prod VM. The CN
  # provider lazy-imports them so the module loads even where they are absent
  # (tests inject fakes); they stay in the runtime set so the prod wheel /
  # venv install carries them (framework §12.8).
  "akshare>=1.12",
  "baostock>=0.8.8",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "python-jose[cryptography]>=3.3,<4",
  # B023 F004 fills route accepts multipart CSV uploads via `UploadFile`;
  # FastAPI raises RuntimeError at import time when `Form` / `UploadFile`
  # appear in a route signature without this transitive dependency
  # installed. Pin a known-good version range matching FastAPI 0.115.
  "python-multipart>=0.0.9,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<0.31",
]

[project.scripts]
workbench-bootstrap = "workbench_api.cli.bootstrap:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "types-python-jose>=3.3",
  # B073 F001 — VCR record/replay of the three httpx loaders (Tiingo / SEC /
  # LLM gateway) so CI replays committed cassettes fully offline (no key, no
  # network) and a re-record catches API-shape drift. pytest-recording wires
  # vcrpy into pytest via @pytest.mark.vcr + the vcr_config / vcr_cassette_dir
  # fixtures in tests/conftest.py.
  "vcrpy>=6",
  "pytest-recording>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["workbench_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# B080 F001 — verbatim historical trial data: the long metric strings are copied
# exactly from signoff reports; reflowing them to satisfy E501 would risk altering
# the numbers, so the line-length rule is waived for this pure-data module.
"workbench_api/monitoring/trial_backfill.py" = ["E501"]
# B081 F004 — same rationale: the A/B metric strings are transcribed verbatim from the
# engine-fidelity report; reflowing risks altering the numbers.
"workbench_api/monitoring/trial_backfill_b081.py" = ["E501"]
"workbench_api/monitoring/trial_backfill_b083.py" = ["E501"]
"workbench_api/monitoring/trial_backfill_b084.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
# Test files run in CI and were also scanned by Codex F006; including
# `tests` here keeps the surfaces in lockstep so a stray `monkeypatch`
# without an annotation cannot pass local mypy and then trip evaluator
# review (B021-F006-2 was exactly that drift).
files = ["workbench_api", "tests"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# B061 F002 — akshare / baostock (CN EOD data libs) ship no type stubs and are
# lazy-imported by the CN provider. Treat as untyped so strict mypy passes
# whether or not the heavy libs are installed in the local env.
module = ["akshare", "akshare.*", "baostock", "baostock.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# B073 F001 — vcrpy ships no type stubs. It is a dev-only test dependency
# (pytest-recording drives it via @pytest.mark.vcr); the few tests that import
# vcr.errors directly assert on CannotOverwriteExistingCassetteException.
module = ["vcr", "vcr.*"]
ignore_missing_imports = true
